# pradigi-task

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml
requirements/: requirements-dev.txt  requirements.txt
src/: chat.py  doc_utils.py  docs.py  ingest.py  llm_utils.py  main.py  utils.py
